[package]
name = "irisguard"
version = "0.1.1"
edition = "2021"
authors = ["kimpors linbetterthanwin@gmail.com"]
license = "MIT"
description = "Password generator"
homepage = "https://github.com/kimpors/irisguard"
repository = "https://github.com/kimpors/irisguard"
keywords = ["password", "generator"]
categoires = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
rand = "0.8.5"

